--- a/frontend/src/component/Header/Header.css
+++ b/frontend/src/component/Header/Header.css
@@ -91,3 +91,60 @@
     text-decoration: none;
     color: #212121;
 }
+.header_search{
+    width: 100vw;
+    height: 6vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid rgba(186, 186, 186, 0.45);
+}
+.header_search_container{
+    height: 97%;
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.header_search_container-left{
+    width: 60%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.header_search_container-left_input-location_container{
+    padding-left: 5px;
+    padding-right: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(241,244,246);
+    height: 70%;
+    width: 30%;
+    position: relative;
+}
+.input-location_container-location-input{
+    height: 100%;
+    width: 70%;
+    border: none;
+    background-color: transparent;
+    outline: none;
+    font-family: "Clear Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 20px;
+    color: #000000;
+    padding-left: 10px;
+}
+.input-location_container-location-address-dropdown{
+    width: 100%;
+    height: 50vh;
+    position: absolute;
+    background-color: white;
+    bottom: -467px;
+    border-radius: 2px;
+    box-shadow: 0 2px 4px 0 rgb(0 0 0 / 50%);
+    border: 1px solid #7f7f7f;
+}
