--- a/frontend/src/component/Header/Header.css
+++ b/frontend/src/component/Header/Header.css
@@ -147,4 +147,38 @@
     border-radius: 2px;
     box-shadow: 0 2px 4px 0 rgb(0 0 0 / 50%);
     border: 1px solid #7f7f7f;
+    overflow-y: scroll;
+}
+.list-para{
+    font-family: "Clear Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: rgba(33, 33, 33, 0.87);
+    margin-left: 30px;
+}
+.list-div{
+    height:40px;  
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+.list-div:hover{
+    background-color: rgb(251, 239, 239) ;
+}
+.list-para-all{
+    font-family: "Clear Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 20px;
+    color: rgba(33, 33, 33, 0.87);
+    margin-left: 30px;
+}
+.list-div-all{
+    height:40px;  
+    display: flex;
+    align-items: center;
+    background-color: #f2f2f2;
 }
